peac_dev/force-app/main/default/objects/Bank_Information__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>