peac_dev/force-app/main/default/objects/Bank_Information__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>